add pagination to blog listing

--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -16,4 +16,5 @@
         </p>
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}_
+    {% include "pagination.html" with page=posts %}
 {% endblock %}
